--- a/index.html
+++ b/index.html
@@ -5,14 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de Compras</title>
     <link rel="stylesheet" href="header/header.css">
-    <link rel="stylesheet" href="seccion/seccion.css">
     <link rel="stylesheet" href="formulario/formulario.css">
+    <link rel="stylesheet" href="seccion/seccion.css">
 </head>
 <body>
 
-    <script src="header/header.js"></script>
-    <script src="formulario/formulario.js"></script>
-    <script src="seccion/seccion.js"></script>
+    <script type="module" src="main.js"></script>
     
 </body>
 </html>
