--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="header/header.css">
     <link rel="stylesheet" href="formulario/formulario.css">
     <link rel="stylesheet" href="seccion/seccion.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+
 </head>
 <body>
 
     <script type="module" src="main.js"></script>
+    
     
 </body>
 </html>
